Fixed horizontal scrollbar issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500|Chelsea+Market|Play:400,700|Rokkitt);
 
 body { padding-top: 50px; }
+.row.disableMarginRight { margin-right: auto !important; } /* Fixes horizontal scrollbar issue */
 .consoleHistory { height: 90%; }
 .commandLine { height: 10%; }
-.ace_editor { height: 100%; font: 12pt 'Source Code Pro', monospace !important; }
+.ace_editor { height: 100%; width: 100%; font: 12pt 'Source Code Pro', monospace !important; }
 .ace_editor.commandLine { height: 1.2em; font: 12pt 'Source Code Pro', monospace !important; }
 .no-space { padding-left: 0px; padding-right: 0px; }
 
